[package]
name = "neo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
reqwest = "0.11.17"
sqlx = {version = "0.6.3", features = ["runtime-tokio-native-tls","sqlite"]}
tokio = {version = "1.28.1", features = ["full"]}
