[package]
name = "neo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neo-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
regex = "1.8.3"
regexp = "0.3.2"
reqwest = "0.11.17"
rusqlite = {version = "0.29.0", features = ["functions"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["full"]}
warp = "0.3.5"

